--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,3 @@
-[submodule "vendor/remotestorage-0.6"]
-	path = vendor/remotestorage-0.6
-	url = git://github.com/remotestorage/remotestorage.js.git
-[submodule "vendor/remotestorage-0.7"]
-	path = vendor/remotestorage-0.7
-	url = git://github.com/remotestorage/remotestorage.js.git
-[submodule "vendor/remotestorage-0.8"]
-	path = vendor/remotestorage-0.8
-	url = git://github.com/remotestorage/remotestorage.js.git
-[submodule "vendor/remotestorage-0.9"]
-	path = vendor/remotestorage-0.9
-	url = git://github.com/remotestorage/remotestorage.js.git
-[submodule "vendor/remotestorage-0.10"]
-	path = vendor/remotestorage-0.10
-	url = git://github.com/remotestorage/remotestorage.js.git
-[submodule "vendor/remotestorage-0.11"]
-	path = vendor/remotestorage-0.11
-	url = git://github.com/remotestorage/remotestorage.js.git
+[submodule "vendor/remotestorage-0.14"]
+	path = vendor/remotestorage-0.14
+	url = https://github.com/remotestorage/remotestorage.js.git
