--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "redis": ">= 0.8.2"
   },
   "devDependencies": {
-    "eslint-config-standard": "^11.0.0",
+    "rimraf": "^2.6.2",
+    "api-benchmark": "^0.5.0",
+    "bdd-lazy-var": "^2.2.3",
+    "chai-as-promised": "^7.1.1",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "chai-spies": "^1.0.0",
+    "eslint-config-standard": "^11.0.0",
     "mocha": "^5.0.5"
   },
   "scripts": {
-    "test": "mocha spec/runner.js"
+    "test": "mocha -u bdd-lazy-var/getter  spec/runner.js"
   },
   "repository": {
     "type": "git",
