--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mocha": "^5.0.5"
   },
   "scripts": {
+    "dev": "nodemon -w ./lib ./bin/armadietto.js -c ./bin/test-suite.json",
     "test": "mocha -u bdd-lazy-var/getter  spec/runner.js"
   },
   "repository": {
