--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "redis": ">= 0.8.2"
   },
   "devDependencies": {
-    "rimraf": "^2.6.2",
     "api-benchmark": "^0.5.0",
     "bdd-lazy-var": "^2.2.3",
-    "chai-as-promised": "^7.1.1",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "chai-http": "^4.0.0",
     "chai-spies": "^1.0.0",
     "eslint-config-standard": "^11.0.0",
-    "mocha": "^5.0.5"
+    "mocha": "^5.0.5",
+    "rimraf": "^2.6.2"
   },
   "scripts": {
     "dev": "nodemon -w ./lib ./bin/armadietto.js -c ./bin/test-suite.json",
