--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ node_modules
 bin/test-suite-storage/rs/rs-test/.lock
 bin/test-suite-storage/rs/rs-test/.~meta
 bin/test-suite-storage/rs/rs-test/storage
+.vscode
