--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "armadietto",
   "description": "Node.js remoteStorage server",
   "homepage": "http://github.com/remotestorage/armadietto",
-  "author": "James Coglan <jcoglan@gmail.com> (http://jcoglan.com/)",
   "keywords": [
     "remoteStorage",
     "webfinger",
     "oauth",
-    "webdav"
+    "webdav",
+    "remotestorage.js",
+    "my own storage",
+    "privacy",
+    "decentralization"
   ],
   "license": "MIT",
-  "version": "0.3.0",
+  "version": "0.1.0",
   "engines": {
     "node": ">=7.6.0"
   },
@@ -22,8 +25,7 @@
     "argparse": "^1.0.7",
     "ejs": ">= 2.0.0",
     "ioredis": "^3.2.2",
-    "lockfile": ">= 1.0.0",
-    "redis": ">= 0.8.2"
+    "lockfile": ">= 1.0.0"
   },
   "devDependencies": {
     "api-benchmark": "^0.5.0",
@@ -34,7 +36,8 @@
     "chai-spies": "^1.0.0",
     "eslint-config-standard": "^11.0.0",
     "mocha": "^5.0.5",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "redis": ">= 0.8.2"
   },
   "scripts": {
     "dev": "nodemon -w ./lib ./bin/armadietto.js -c ./bin/test-suite.json",
