--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "decentralization"
   ],
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "engines": {
     "node": ">=7.6.0"
   },
@@ -25,7 +25,8 @@
     "argparse": "^1.0.7",
     "ejs": ">= 2.0.0",
     "ioredis": "^3.2.2",
-    "lockfile": ">= 1.0.0"
+    "lockfile": ">= 1.0.0",
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "api-benchmark": "^0.5.0",
