--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "pretest": "npm run lint",
     "test": "mocha -u bdd-lazy-var/getter  spec/runner.js",
     "lint": "eslint \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
-    "lint:fix": "npm run lint --fix"
+    "lint:fix": "eslint --fix \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\""
   },
   "repository": {
     "type": "git",
