--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ bin/test-suite-storage/rs/rs-test/.lock
 bin/test-suite-storage/rs/rs-test/.~meta
 bin/test-suite-storage/rs/rs-test/storage
 .vscode
+.idea
