--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@ dump.rdb
 example/store
 example/tree
 node_modules
-bin/test-suite-storage/rs/rs-test/.lock
-bin/test-suite-storage/rs/rs-test/.~meta
-bin/test-suite-storage/rs/rs-test/storage
 .vscode
 .idea
+bin/test-suite-storage
