--- a/example/package.json
+++ b/example/package.json
@@ -1,16 +1,16 @@
 {
   "name": "armadietto-example",
   "version": "1.0.0",
-  "description": "This repository contains examples using the `stable` and `master` branches of remoteStorage.js. You'll need to bind `127.0.0.1` to the host `local.dev` for the demo to work correctly.",
+  "description": "This repository contains an example using remoteStorage.js against the armadietto remoteStorage server.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "serve": "http-server ./ -p 8080 "
   },
-  "author": "",
-  "license": "ISC",
+  "author": "remoteStorage contributors",
+  "license": "MIT",
   "dependencies": {
-    "remotestorage-widget": "^1.3.0",
-    "remotestoragejs": "^1.0.3"
+    "http-server": "0.11.1",
+    "remotestoragejs": "^1.2.2",
+    "remotestorage-widget": "^1.4.0"
   }
 }
