--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.2.0",
     "chai-spies": "^1.0.0",
-    "http-server": "0.11.1",
     "eslint": "^5.15.3",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
@@ -42,8 +41,6 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "nodemon": "1.18.10",
-    "remotestoragejs": "1.2.2",
-    "remotestorage-widget": "1.4.0",
     "mocha": "^5.1.1",
     "rimraf": "^2.6.2"
   },
@@ -52,9 +49,7 @@
     "pretest": "npm run lint",
     "test": "mocha -u bdd-lazy-var/getter  spec/runner.js",
     "lint": "eslint \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
-    "lint:fix": "eslint --fix \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
-    "example:node": "node ./example/server.js",
-    "example:serve": "http-server ./ -p 8080 "
+    "lint:fix": "eslint --fix \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\""
   },
   "repository": {
     "type": "git",
