revert .gitignore back to previous version, not ignoring all of bin/test-suite-storage

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ dump.rdb
 example/store
 example/tree
 node_modules
+bin/test-suite-storage/rs/rs-test/.lock
+bin/test-suite-storage/rs/rs-test/.~meta
+bin/test-suite-storage/rs/rs-test/storage
 .vscode
 .idea
-bin/test-suite-storage
