--- a/package.json
+++ b/package.json
@@ -29,22 +29,23 @@
   },
   "devDependencies": {
     "api-benchmark": "^0.5.0",
-    "bdd-lazy-var": "^2.5.0",
+    "bdd-lazy-var": "^2.5.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.2.0",
     "chai-spies": "^1.0.0",
-    "eslint": "^5.7.0",
+    "eslint": "^5.15.3",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "nodemon": "1.18.10",
     "mocha": "^5.1.1",
     "rimraf": "^2.6.2"
   },
   "scripts": {
-    "dev": "nodemon -w ./lib ./bin/armadietto.js -c ./bin/test-suite.json",
+    "dev": "nodemon --inspect -w ./lib ./bin/armadietto.js -c ./bin/test-suite.json",
     "pretest": "npm run lint",
     "test": "mocha -u bdd-lazy-var/getter  spec/runner.js",
     "lint": "eslint \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
