--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "argparse": "^1.0.10",
     "ejs": "^2.6.1",
     "lockfile": "^1.0.4",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "api-benchmark": "^0.5.0",
