Require newer node.js version
Anything past 12 is really a bit too ancient these days.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "version": "0.1.5",
   "engines": {
-    "node": ">=7.6.0"
+    "node": ">=12.x"
   },
   "bin": {
     "armadietto": "./bin/armadietto.js"
