--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "1.18.10",
+    "nodemon": "^2.0.15",
     "mocha": "^5.1.1",
     "rimraf": "^3.0.2"
   },
