--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "chai-spies": "^1.0.0",
-    "eslint": "^5.15.3",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint": "^8.7.0",
+    "eslint-config-standard": "github:standard/eslint-config-standard#v17.0.0-0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-standard": "^5.0.0",
     "nodemon": "^2.0.15",
     "mocha": "^5.1.1",
     "rimraf": "^3.0.2"
