--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "eslint": "^8.7.0",
     "eslint-config-standard": "github:standard/eslint-config-standard#v17.0.0-0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-n": "^14.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "nodemon": "^2.0.15",
     "mocha": "^5.1.1",
+    "nodemon": "^2.0.15",
     "rimraf": "^3.0.2"
   },
   "scripts": {
