--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -1,11 +1,25 @@
 name: test-and-lint
 on:
   push:
-    branches: [ master ]
+    branches: [ master, stress-test ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, stress-test ]
 jobs:
-  build:
+  Lint:
+    name: node.js
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+      - name: Install dependencies
+        run: npm ci
+      - name: Run linter
+        run: npm run lint
+
+  Automated-Tests:
     name: node.js
     runs-on: ubuntu-latest
     strategy:
@@ -22,5 +36,5 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm test
-      - name: Run linter
-        run: npm run lint
+      - name: Run stress tests
+        run: npm stresstest
