--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dev": "nodemon --inspect -w ./lib ./bin/armadietto.js -c ./bin/dev-conf.json",
     "couchdb": "./bin/armadietto-couchdb.js -c ./bin/conf-couchdb.json",
     "test": "mocha -u bdd-lazy-var/getter  spec/runner.js",
+    "stresstest": "mocha -u bdd-lazy-var/getter  spec/stress_runner.js",
     "lint": "eslint \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
     "lint:fix": "eslint --fix \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\""
   },
