--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
   "dependencies": {
     "argparse": "^2.0.1",
     "ejs": "^3.1.6",
+    "fast-folder-size": "1.6.1",
     "lockfile": "^1.0.4",
     "mkdirp": "^1.0.4",
+    "node-fetch": "^2.6.7",
+    "rate-limiter-flexible": "^2.3.6",
+    "redis": "3.1.2",
     "winston": "^3.5.1"
   },
   "devDependencies": {
@@ -34,6 +38,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "chai-spies": "^1.0.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.7.0",
     "eslint-config-standard": "^17.0.0-0",
     "eslint-plugin-import": "^2.25.4",
