--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mkdirp": "^1.0.4",
     "node-fetch": "^2.6.7",
     "rate-limiter-flexible": "^2.3.6",
-    "redis": "3.1.2",
+    "redis": "^3.1.2",
     "winston": "^3.5.1"
   },
   "devDependencies": {
