--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         # Support LTS versions based on https://nodejs.org/en/about/releases/
-        node-version: ['12', '14', '16']
+        node-version: ['14', '16', '18']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -29,7 +29,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm test
-      - run: npm run stresstest
+      - run: npm run stresstest-node14
 
   Conditional-Publish-to-NPM:
     needs: [Lint, Automated-Tests]
