--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Run tests
         run: npm test
       - name: Run stress tests
-        run: npm run stresstest
+        run: npm run stresstest-node14
