--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   "scripts": {
     "dev": "nodemon --inspect -w ./lib ./bin/armadietto.js -c ./bin/dev-conf.json",
     "test": "mocha -u bdd-lazy-var/getter  spec/runner.js",
-    "stresstest": "mocha -u bdd-lazy-var/getter  spec/stress_runner.js",
+    "stresstest-node14": "mocha spec/stress_runner.js",
+    "stresstest": "node --experimental-fetch node_modules/mocha/bin/_mocha spec/stress_runner.js",
     "lint": "eslint \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
     "lint:fix": "eslint --fix \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\""
   },
