Adds script to measure performance under stress

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dev": "nodemon --inspect -w ./lib ./bin/armadietto.js -c ./bin/dev-conf.json",
     "test": "mocha -u bdd-lazy-var/getter  spec/runner.js",
     "create-user": "node --experimental-fetch ./bin/create-user.js",
+    "measure": "node --experimental-fetch ./bin/measure.js",
     "stress-test-auto": "mocha spec/stress_runner_auto.js",
     "stress-test": "node --experimental-fetch node_modules/mocha/bin/_mocha spec/stress_runner.js",
     "lint": "eslint \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
