Change default config file to armadietto.json
It's generally a good practice to have file extensions to make it easier for users.

--- a/contrib/systemd/armadietto.service
+++ b/contrib/systemd/armadietto.service
@@ -13,7 +13,7 @@ User=armadietto
 Group=armadietto
 Environment=
 ExecStartPre=
-ExecStart=/usr/bin/armadietto -c /etc/armadietto/conf
+ExecStart=/usr/bin/armadietto -c /etc/armadietto/conf.json
 ExecStartPost=
 ExecStop=
 ExecReload=
