--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -1,9 +1,9 @@
 name: test-and-lint
 on:
   push:
-    branches: [ master ]
+    branches: [ master, modular ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, modular ]
 jobs:
   build:
     name: node.js
@@ -13,9 +13,9 @@ jobs:
         # Support LTS versions based on https://nodejs.org/en/about/releases/
         node-version: ['18', '20', '21']
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
