--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^7.1.0",
     "http-errors": "^2.0.0",
     "lockfile": "^1.0.4",
+    "minio": "^7.1.3",
     "mkdirp": "^1.0.4",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
