--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -9,6 +9,7 @@ jobs:
     name: node.js
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         # Support LTS versions based on https://nodejs.org/en/about/releases/
         node-version: ['18', '20', '21']
