--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "main": "./lib/armadietto.js",
   "dependencies": {
     "argparse": "^2.0.1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
