--- a/package.json
+++ b/package.json
@@ -22,18 +22,21 @@
   },
   "main": "./lib/armadietto.js",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.523.0",
+    "@aws-sdk/lib-storage": "^3.525.1",
     "argparse": "^2.0.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "http-errors": "^2.0.0",
     "lockfile": "^1.0.4",
-    "minio": "^7.1.3",
     "mkdirp": "^1.0.4",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "yaml": "^2.4.0"
   },
   "devDependencies": {
     "bdd-lazy-var": "^2.6.1",
