--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "decentralization"
   ],
   "license": "MIT",
-  "version": "0.2.0",
+  "version": "0.5.0",
   "engines": {
     "node": ">=18.0"
   },
@@ -57,7 +57,7 @@
   },
   "scripts": {
     "dev": "nodemon --inspect -w ./lib ./bin/armadietto.js -c ./bin/dev-conf.json",
-    "modular": "PORT=8001 node --watch ./bin/www -c ./bin/dev-conf.json",
+    "modular": "PORT=8001 node --watch --trace-warnings ./bin/www -c ./bin/dev-conf.json",
     "test": "mocha -u bdd-lazy-var/getter spec/runner.js",
     "test-watch": "mocha --watch -u bdd-lazy-var/getter spec/runner.js",
     "lint": "eslint --max-warnings=0 \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
