--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.18.0",
+    "express-jwt": "^8.4.1",
     "helmet": "^7.1.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lockfile": "^1.0.4",
     "mkdirp": "^1.0.4",
     "morgan": "^1.10.0",
