--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.523.0",
     "@aws-sdk/lib-storage": "^3.525.1",
+    "@smithy/node-http-handler": "^2.5.0",
     "argparse": "^2.0.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
