lists users & admins, generates & validates admin invites; replaces user signup with request for invite

--- a/contrib/systemd/armadietto.service
+++ b/contrib/systemd/armadietto.service
@@ -11,7 +11,7 @@ Restart=always
 RestartSec=1
 User=armadietto
 Group=armadietto
-Environment=
+Environment=NODE_ENV=production
 ExecStartPre=
 ExecStart=/usr/bin/armadietto -c /etc/armadietto/conf.json
 ExecStartPost=
