Re-implements as modular server using Express (#113)
* Splits layout.html into header and footer, so only one call to render is made

* Updates dependencies

* Adds alternate modular server using Express, w/ automated tests

* Adds errorPage() and shorten() utilities

* Pulls request listener out of Armadietto so it can share tests w/ modular

* modular server: Adds signup route & implements basePath config

* Modular server: implements Web Finger

* modular server: implements OAuth

* modular server: implements storage

* Monolithic server removes all listeners on process, when stopped

* INCOMPLETE: implements S3 streaming store

* Modular: Re-implements streaming store as handler

* removes non-router S3 store

* Modular: permissions are stored in JWT

* Modular: reworks validPathParam to match spec & removes validUserParam

* Modular: Adds hostIdentity as issuer to JWTs

* Modular: each streaming store decides what usernames are valid

* Modular: Cleans up names to 'storage common' and 'store handler'

* Modular: S3_store_handler implements Optimistic concurrency for writes

* Implements latest version of RS spec - root scope is '*'

* Fixes bug: GET of non-existent folder now returns empty listing

* S3: old blob versions are deleted after 35 days

* Modular: Username check is now sanity check

* Modular: JWTs use HMAC + SHA512 (HS512)

* Modular: Updates webFinger to match current spec

* Extends test timeout in GitHub workflow

* Modular: removes Morgan in favor of custom logging middleware

* Modular: wraps S3 handler factory parameters in object, and fixes weakness in readJson()

* Modular: corrects RS "directory" to "folder" and "file" to "document".

* Modular: tweaks log levels

* Modular: extracts allocateUserStorage() from createUser() in S3-streaming-store

* Updates dev-conf.json to work with both modular & monolithic servers

* S3_store_handler: works w/ S3 implementations w/o versionin

--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -1,21 +1,22 @@
 name: test-and-lint
 on:
   push:
-    branches: [ master ]
+    branches: [ master, modular ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, modular ]
 jobs:
   build:
     name: node.js
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         # Support LTS versions based on https://nodejs.org/en/about/releases/
         node-version: ['18', '20', '21']
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
@@ -23,4 +24,4 @@ jobs:
       - name: Run linter
         run: npm run lint
       - name: Run tests
-        run: npm test
+        run: npm test -- --timeout 10000
