--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "decentralization"
   ],
   "license": "MIT",
-  "version": "0.2.0",
+  "version": "0.5.0",
   "engines": {
     "node": ">=18.0"
   },
@@ -22,31 +22,45 @@
   },
   "main": "./lib/armadietto.js",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.523.0",
+    "@aws-sdk/lib-storage": "^3.525.1",
+    "@smithy/node-http-handler": "^2.5.0",
     "argparse": "^2.0.1",
-    "ejs": "^3.1.7",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "helmet": "^7.1.0",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lockfile": "^1.0.4",
     "mkdirp": "^1.0.4",
-    "winston": "^3.5.1"
+    "node-mocks-http": "^1.14.1",
+    "pug": "^3.0.2",
+    "winston": "^3.11.0",
+    "yaml": "^2.4.0"
   },
   "devDependencies": {
     "bdd-lazy-var": "^2.6.1",
-    "chai": "^4.3.4",
+    "chai": "^4.4.1",
     "chai-as-promised": "^7.1.1",
-    "chai-http": "^4.3.0",
-    "chai-spies": "^1.0.0",
-    "eslint": "^8.7.0",
-    "eslint-config-standard": "^17.0.0-0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-n": "^14.0.0",
+    "chai-http": "^4.4.0",
+    "chai-spies": "^1.1.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "mocha": "^10.1.0",
-    "nodemon": "^2.0.15",
+    "eslint-plugin-promise": "^6.1.1",
+    "mocha": "^10.3.0",
+    "nodemon": "^3.0.3",
     "rimraf": "^3.0.2"
   },
   "scripts": {
     "dev": "nodemon --inspect -w ./lib ./bin/armadietto.js -c ./bin/dev-conf.json",
+    "modular": "PORT=8001 node --watch --trace-warnings ./bin/www -c ./bin/dev-conf.json",
     "test": "mocha -u bdd-lazy-var/getter spec/runner.js",
+    "test-watch": "mocha --watch -u bdd-lazy-var/getter spec/runner.js",
     "lint": "eslint --max-warnings=0 \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
     "lint:fix": "eslint --fix \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\""
   },
