--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@ dev-log
 dev-storage
 .vscode
 .idea
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Data stores
+myminio
