--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-session": "^1.18.0",
-    "express-useragent": "^1.0.15",
     "helmet": "^7.1.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -43,6 +42,7 @@
     "proquint": "^0.0.1",
     "rate-limiter-flexible": "^5.0.3",
     "robots.txt": "^1.1.0",
+    "ua-parser-js": "^1.0.38",
     "winston": "^3.11.0",
     "yaml": "^2.4.0"
   },
