--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "modular": "PORT=8001 node --watch --trace-warnings ./bin/www -c ./bin/dev-conf.json",
     "test": "mocha -u bdd-lazy-var/getter spec/runner.js",
     "test-watch": "mocha --watch -u bdd-lazy-var/getter spec/runner.js",
-    "test-s3-play-min-io": "mocha spec/store_handlers/S3_store_handler.spec.js",
+    "test-s3-wo-configured-server": "mocha spec/store_handlers/S3_store_handler.spec.js",
     "lint": "eslint --max-warnings=0 \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
     "lint:fix": "eslint --fix \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\""
   },
