--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:latest as build
+FROM alpine:latest AS build
 
 ARG PKG_MANAGER="npm"
 ARG INSTALL_COMMAND="npm ci --production"
@@ -21,7 +21,6 @@ ARG CONFIG_PATH_STORAGE="/usr/share/armadietto"
 ARG CONFIG_PATH_LOGS="/opt/armadietto/logs"
 ARG PROJECT_NAME="armadietto"
 ARG PORT="8000"
-ARG USER="armadietto"
 
 ENV NODE_ENV=production
 ENV PROJECT_NAME=$PROJECT_NAME
@@ -51,13 +50,13 @@ RUN dos2unix bin/armadietto.js
 
 RUN ln -s /opt/armadietto/bin/armadietto.js /usr/local/bin/armadietto
 
-COPY docker/config.json /etc/armadietto/conf
+COPY bin/conf.example.json /etc/armadietto/conf.json
 
 VOLUME $CONFIG_PATH_STORAGE
 VOLUME $CONFIG_PATH_LOGS
 EXPOSE $PORT
 USER $PROJECT_NAME
 
-CMD armadietto -c /etc/armadietto/conf
+CMD ["armadietto", "-c", "/etc/armadietto/conf.json"]
 
 HEALTHCHECK --start-period=10s CMD wget -q -O /dev/null http://127.0.0.1:$PORT/
