--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "test-watch": "mocha --watch -u bdd-lazy-var/getter spec/runner.js",
     "test-s3-play-min-io": "mocha spec/store_handlers/S3_store_handler.spec.js",
     "lint": "eslint --max-warnings=0 \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
-    "lint:fix": "eslint --fix \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\""
+    "lint:fix": "eslint --fix \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
+    "build-monolithic": "docker build . -f docker/Dockerfile -t remotestorage/armadietto"
   },
   "repository": {
     "type": "git",
