--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -35,8 +35,8 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: ./docker/Dockerfile
-        tags: ${{ env.DOCKER_USER }}/armadietto:${{ needs.version.outputs.version }}
+        file: ./docker/Dockerfile-monolithic
+        tags: ${{ env.DOCKER_USER }}/armadietto-monolithic:${{ needs.version.outputs.version }}
         outputs: type=docker,dest=/tmp/docker.tar
     - name: Upload artifact
       uses: actions/upload-artifact@v4
@@ -61,7 +61,7 @@ jobs:
     - name: Run security tests
       continue-on-error: true
       run: |
-        docker run --rm  -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image --exit-code 1 $DOCKER_USER/armadietto:${{ needs.version.outputs.version }}
+        docker run --rm  -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image --exit-code 1 $DOCKER_USER/armadietto-monolithic:${{ needs.version.outputs.version }}
   #e2e_test:
   #  runs-on: ubuntu-latest
   #  needs:
@@ -97,6 +97,6 @@ jobs:
     - name: Publish Docker image
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_TOKEN
-        docker push $DOCKER_USER/armadietto:${{ needs.version.outputs.version }}
-        docker tag $DOCKER_USER/armadietto:${{ needs.version.outputs.version }} $DOCKER_USER/armadietto
-        docker push $DOCKER_USER/armadietto
+        docker push $DOCKER_USER/armadietto-monolithic:${{ needs.version.outputs.version }}
+        docker tag $DOCKER_USER/armadietto-monolithic:${{ needs.version.outputs.version }} $DOCKER_USER/armadietto-monolithic
+        docker push $DOCKER_USER/armadietto-monolithic
