--- a/docker/Dockerfile-modular
+++ b/docker/Dockerfile-modular
@@ -15,13 +15,12 @@ RUN $INSTALL_COMMAND
 
 FROM alpine:latest
 
-LABEL org.opencontainers.image.title="Armadietto (monolithic)"
-LABEL org.opencontainers.image.description="Armadietto Node.js web service (a remoteStorage server) (monolithic)"
+LABEL org.opencontainers.image.title="Armadietto (modular)"
+LABEL org.opencontainers.image.description="Armadietto Node.js web service (a remoteStorage server) (modular)"
 LABEL org.opencontainers.image.documentation="https://remotestorage.io/"
 LABEL org.opencontainers.image.source="https://github.com/remotestorage/armadietto"
 LABEL org.opencontainers.image.licenses="MIT"
 
-ARG CONFIG_PATH_STORAGE="/usr/share/armadietto"
 ARG CONFIG_PATH_DIR="/etc/armadietto"
 ARG CONFIG_PATH_LOGS="/opt/armadietto/logs"
 ARG USER="armadietto"
@@ -39,9 +38,7 @@ RUN apk add nodejs
 
 RUN adduser -u 6582 -HD $USER
 
-RUN mkdir -m 0700 $CONFIG_PATH_STORAGE
 RUN mkdir -m 0700 $CONFIG_PATH_LOGS
-RUN chown $USER $CONFIG_PATH_STORAGE
 RUN chown $USER $CONFIG_PATH_LOGS
 
 COPY --from=build /opt/armadietto/node_modules/ node_modules/
@@ -51,18 +48,15 @@ COPY lib/ lib/
 COPY bin/ bin/
 
 # Ensure bin file (esp the bang line) has unix eol
-RUN dos2unix bin/armadietto.js
+RUN dos2unix bin/www
 
-RUN ln -s /opt/armadietto/bin/armadietto.js /usr/local/bin/armadietto
+COPY docker/conf-modular/conf.json /etc/armadietto/conf.json
 
-COPY docker/conf-monolithic/conf.json /etc/armadietto/conf.json
-
-VOLUME $CONFIG_PATH_STORAGE
 VOLUME $CONFIG_PATH_DIR
 VOLUME $CONFIG_PATH_LOGS
 EXPOSE $PORT
 USER $USER
 
-CMD ["armadietto", "-c", "/etc/armadietto/conf.json"]
+CMD ["bin/www", "-c", "/etc/armadietto/conf.json"]
 
-HEALTHCHECK --start-period=10s CMD wget -q -O /dev/null http://127.0.0.1:$PORT/account
+HEALTHCHECK --start-period=10s CMD wget -q -O /dev/null http://127.0.0.1:$PORT/account/login
