--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "scripts": {
     "dev": "nodemon --inspect -w ./lib ./bin/armadietto.js -c ./bin/dev-conf.json",
     "modular": "PORT=8001 node --watch --trace-warnings ./bin/www -c ./bin/dev-conf.json",
-    "test": "mocha -u bdd-lazy-var/getter spec/runner.js",
+    "test": "mocha --timeout 5000 -u bdd-lazy-var/getter spec/runner.js",
     "test-watch": "mocha --watch -u bdd-lazy-var/getter spec/runner.js",
     "test-s3-wo-configured-server": "mocha spec/store_handlers/S3_store_handler.spec.js",
     "lint": "eslint --max-warnings=0 \"lib/**/*.js\" \"bin/**/*.js\" \"spec/**/*.js\"",
