Updates npm publishing to use Trusted Publishing (OIDC Connect)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,14 +3,18 @@ on:
   push:
     branches: [ master ]
 
+permissions:
+  id-token: write  # Required for OIDC (for npm publish)
+  contents: read
+
 jobs:
   Lint:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 This job was triggered by a “${{ github.event_name }}” event on “${{ github.ref }}”."
 
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 16
       - run: npm ci
@@ -23,8 +27,8 @@ jobs:
         # Support LTS versions based on https://nodejs.org/en/about/releases/
         node-version: ['18', '20', '21']
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
@@ -34,11 +38,15 @@ jobs:
     needs: [Lint, Automated-Tests]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: JS-DevTools/npm-publish@0f451a94170d1699fd50710966d48fb26194d939
+      - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.NPM_TOKEN }}
+          registry-url: 'https://registry.npmjs.org'
 
+      - name: Update npm
+        run: npm install -g npm@latest
+      - run: npm ci
+      - id: publish
+        run: npm publish
       - if: steps.publish.outputs.type != 'none'
         run: |
           echo "NPM ${{steps.publish.outputs.type}} version changed: ${{ steps.publish.outputs.old-version }} => ${{ steps.publish.outputs.version }}"
